--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body onload="loadBody()">
   <div class="header">
-    <h1>Study with Me! by stackie123</h1>
+    <h1>Study with Me! by Retr0</h1>
 </div>
  
   <div class="container">
